--- a/js/package.json
+++ b/js/package.json
@@ -2,8 +2,9 @@
   "name": "chat-dys",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@9.1.4",
+  "packageManager": "pnpm@9.4.0",
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.5.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.14.5",
     "eslint": "^8.57.0",
