--- a/js/packages/dys-ui/package.json
+++ b/js/packages/dys-ui/package.json
@@ -32,8 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "radix-vue": "^1.8.5",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.8.1",
@@ -47,6 +46,7 @@
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
     "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^5.3.1",
     "vitest": "^1.6.0",
     "vue": "^3.4.29",
@@ -55,6 +55,7 @@
   },
   "peerDependencies": {
     "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "~3.4.29",
     "vue-router": "^4.3.2"
   }
