--- a/js/packages/dys-ui/components.json
+++ b/js/packages/dys-ui/components.json
@@ -9,5 +9,9 @@
     "baseColor": "slate",
     "cssVariables": true
   },
-  "framework": "vite"
+  "framework": "vite",
+  "aliases": {
+    "components": "@/components",
+    "utils": "@/lib/utils"
+  }
 }
