--- a/js/packages/dys-ui/tsconfig.app.json
+++ b/js/packages/dys-ui/tsconfig.app.json
@@ -6,6 +6,9 @@
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
