--- a/js/packages/dys-ui/tsconfig.build.json
+++ b/js/packages/dys-ui/tsconfig.build.json
@@ -3,6 +3,10 @@
   "exclude": ["**/*.spec.ts", "**/__tests__/**/*"],
   "compilerOptions": {
     "skipLibCheck": true,
-    "lib": ["ESNext", "DOM", "DOM.Iterable"]
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
