--- a/js/packages/dys-ui/tsconfig.node.json
+++ b/js/packages/dys-ui/tsconfig.node.json
@@ -1,11 +1,9 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
-  "include": ["vite.config.*", "vitest.config.*"],
+  "include": ["vite.config.*", "vitest.config.*", "package.json"],
   "compilerOptions": {
     "composite": true,
     "noEmit": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "types": ["node"]
