--- a/js/packages/dys-ui/tsconfig.build.json
+++ b/js/packages/dys-ui/tsconfig.build.json
@@ -4,6 +4,8 @@
   "compilerOptions": {
     "skipLibCheck": true,
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "target": "ES2020",
+    "moduleResolution": "Bundler",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
