--- a/js/packages/dys-ui/package.json
+++ b/js/packages/dys-ui/package.json
@@ -43,6 +43,7 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
     "tailwindcss": "^3.4.4",
