--- a/js/packages/oapi-todo/package.json
+++ b/js/packages/oapi-todo/package.json
@@ -33,6 +33,7 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-vue": "^9.27.0",
     "npm-run-all2": "^6.2.2",
