--- a/go/.gitignore
+++ b/go/.gitignore
@@ -1,30 +1,3 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-pnpm-debug.log*
-
-node_modules
-.DS_Store
-dist
-dist-ssr
-coverage
-*.local
-
-# Editor directories and files
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-*.tsbuildinfo
-
-test-results/
-playwright-report/
-
-# Go specific
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -44,3 +17,5 @@ playwright-report/
 # Go workspace file
 go.work
 go.work.sum
+
+.env
