--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,9 @@
     "titleBar.activeBackground": "#70186E",
     "titleBar.activeForeground": "#FEFCFE"
   },
-  "typescript.tsdk": "js/node_modules/typescript/lib"
+  "typescript.tsdk": "js/node_modules/typescript/lib",
+  "tailwindCSS.experimental.classRegex": [
+    ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
+    ["cx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
+  ]
 }
