--- a/js/packages/dys-ui/package.json
+++ b/js/packages/dys-ui/package.json
@@ -26,36 +26,36 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.1.196",
+    "@iconify-json/lucide": "^1.1.198",
     "@iconify-json/radix-icons": "^1.1.14",
-    "@vee-validate/zod": "^4.13.2",
     "@vueuse/core": "^10.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "radix-vue": "^1.8.5",
-    "tailwind-merge": "^2.3.0",
-    "vee-validate": "^4.13.2",
-    "zod": "^3.23.8"
+    "radix-vue": "^1.9.0",
+    "tailwind-merge": "^2.4.0",
+    "vee-validate": "^4.13.2"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.8.1",
-    "@rushstack/eslint-patch": "^1.8.0",
+    "@rushstack/eslint-patch": "^1.10.3",
     "@tsconfig/node20": "^20.1.4",
+    "@vee-validate/zod": "^4.13.2",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.23.0",
-    "npm-run-all2": "^6.2.0",
+    "eslint-plugin-vue": "^9.27.0",
+    "npm-run-all2": "^6.2.2",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
-    "vite": "^5.3.1",
+    "vite": "^5.3.3",
     "vitest": "^1.6.0",
-    "vue": "^3.4.29",
-    "vue-router": "^4.3.3",
-    "vue-tsc": "^2.0.21"
+    "vue": "^3.4.31",
+    "vue-router": "^4.4.0",
+    "vue-tsc": "^2.0.26",
+    "zod": "^3.23.8"
   },
   "peerDependencies": {
     "tailwindcss": "^3.4.4",
