--- a/js/packages/dys-ui/package.json
+++ b/js/packages/dys-ui/package.json
@@ -32,8 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "radix-vue": "^1.9.0",
-    "tailwind-merge": "^2.4.0",
-    "vee-validate": "^4.13.2"
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.8.1",
@@ -50,6 +49,7 @@
     "npm-run-all2": "^6.2.2",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.13.2",
     "vite": "^5.3.3",
     "vitest": "^1.6.0",
     "vue": "^3.4.31",
@@ -58,9 +58,10 @@
     "zod": "^3.23.8"
   },
   "peerDependencies": {
+    "@egoist/tailwindcss-icons": "^1.8.1",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
-    "vue": "~3.4.29",
-    "vue-router": "^4.3.2"
+    "vee-validate": "^4.13.2",
+    "vue": "~3.4.29"
   }
 }
