todo: move db_data vol

--- a/docker-compose.oapi-todo.yaml
+++ b/docker-compose.oapi-todo.yaml
@@ -27,4 +27,4 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ./db_data:/var/lib/mysql
+      - ./go/oapi-todo/db_data:/var/lib/mysql
