--- a/js/package.json
+++ b/js/package.json
@@ -4,10 +4,17 @@
   "private": true,
   "packageManager": "pnpm@9.5.0",
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.10.3",
     "@total-typescript/ts-reset": "^0.5.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.14.10",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-playwright": "^1.6.2",
+    "eslint-plugin-vue": "^9.27.0",
     "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "typescript": "~5.4.5"
   }
 }
