--- a/js/package.json
+++ b/js/package.json
@@ -7,7 +7,8 @@
     "@rushstack/eslint-patch": "^1.10.3",
     "@total-typescript/ts-reset": "^0.5.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "^20.14.10",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/node": "^20.14.11",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "eslint": "^8.57.0",
