--- a/go/oapi-todo/Dockerfile
+++ b/go/oapi-todo/Dockerfile
@@ -1,5 +1,4 @@
 FROM golang:1.22-alpine
-RUN apk add --no-cache bash
 WORKDIR /app
 
 COPY go.mod go.sum ./
@@ -9,4 +8,4 @@ COPY . /app
 
 RUN go build -o main .
 
-CMD ["./wait-for-it.sh", "db:3306", "--", "./main"]
+CMD ["./main"]
