--- a/js/Dockerfile.oapi-todo
+++ b/js/Dockerfile.oapi-todo
@@ -10,6 +10,6 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 ENV NODE_ENV=production
 RUN pnpm run -r build
 
-FROM nginx:1.26-alpine-slim as client
+FROM nginx:1.26-alpine-slim AS client
 COPY --from=build /app/packages/oapi-todo/dist /usr/share/nginx/html
 COPY --from=build /app/packages/oapi-todo/nginx.conf /etc/nginx/conf.d/default.conf
