--- a/js/packages/dys-ui/package.json
+++ b/js/packages/dys-ui/package.json
@@ -25,35 +25,35 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.1.208",
-    "@iconify-json/radix-icons": "^1.1.15",
+    "@iconify-json/lucide": "^1.2.2",
+    "@iconify-json/radix-icons": "^1.2.0",
     "@vueuse/core": "^11.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "radix-vue": "^1.9.4",
+    "radix-vue": "^1.9.5",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.8.1",
     "@vee-validate/zod": "^4.13.2",
-    "@vitejs/plugin-vue": "^5.1.2",
+    "@vitejs/plugin-vue": "^5.1.3",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.20",
     "npm-run-all2": "^6.2.2",
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.13.2",
-    "vite": "^5.4.2",
-    "vue": "^3.4.38",
+    "vite": "^5.4.3",
+    "vue": "~3.4.38",
     "vue-router": "^4.4.3",
-    "vue-tsc": "^2.0.29",
+    "vue-tsc": "^2.1.6",
     "zod": "^3.23.8"
   },
   "peerDependencies": {
     "@egoist/tailwindcss-icons": "^1.8.1",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.13.2",
-    "vue": "~3.4.29"
+    "vue": "~3.4.38"
   }
 }
