--- a/js/packages/oapi-todo/package.json
+++ b/js/packages/oapi-todo/package.json
@@ -17,9 +17,12 @@
   "dependencies": {
     "@tanstack/vue-query": "^5.52.0",
     "@vee-validate/zod": "^4.13.2",
+    "@vueuse/core": "^11.0.3",
     "axios": "^1.7.5",
+    "clsx": "^2.1.1",
     "dys-ui": "workspace:^",
     "pinia": "^2.2.2",
+    "tailwind-merge": "^2.5.2",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.38",
     "vue-router": "^4.4.3",
@@ -35,7 +38,6 @@
     "npm-run-all2": "^6.2.2",
     "orval": "^7.0.1",
     "postcss": "^8.4.41",
-    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
     "vite": "^5.4.2",
